feat: Medication & Appointment CRUD API Implementation:
